--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-SUPREME COURT OF THE UNITED STATES
+<h3>
+SUPREME COURT OF THE UNITED STATES>
+  
+</h3>
 
 Brown v. Board of Education
 347 U.S. 483 (1954) (USSC+)
